fdo#40735 RTF export: CJK text is typically not single-byte